Update DatabaseAction
- ConfigController
 - Reply with ErrorCodes.java

- Rename Postgres.java to DatabaseAction.java
 - rewrite the methods

- ArchiveSlashCommandEvents
 - Make replies ephemeral
 - Stage Channel can now also archive

- CleanSlashCommandEvents
 - add standardPhrases-Bundle
 - handle errors in the rest-action now
 - fix reply issues

- ConfigureSlashCommandEvents
 - add standardPhrases-Bundle
 - fix methods related to DatabaseAction
 - little fixes

- NoteSlashCommandEvents
 - fix methods related to DatabaseAction

- NotificationSlashCommandEvents
 - fix methods related to DatabaseAction

- PunishmentCommandEvents
 - fix methods related to DatabaseAction

- MessageEvents
 - fix methods related to DatabaseAction

- EventDispatcher
 - remove call from NicknameSlashCommandEvents

- Punishment
 - fix methods related to DatabaseAction

- CommandRegisterer
 - fix configure-command

- WebhookApi
 - fixes

- DeleteOldMessageAttachments
 - fix methods related to DatabaseAction
 - remove controller field in constructor

- YouTubePubSubSubscriber
 - fix methods related to DatabaseAction

- ThreadController
 - remove controller in call from DeleteOldMessageAttachments

- ChannelNotifications
 - fix methods related to DatabaseAction

- ErrorCodes, ErrorGroup, ErrorTarget
 - Enums for simpler error-handling

- YouTubePubSubMapping
 - fix methods related to DatabaseAction

- Main
 - remove field Postgres.java

- Modify LocalizationData
 - clean_de_DE.properties
 - clean_en_UK.properties
 - configure_de_DE.properties
 - configure_en_UK.properties
 - standardPhrases_de_DE.properties
 - standardPhrases_en_UK.properties

- pom.xml
 - add org.jetbrains annotation dependency